fix annoyance of gaps between hoverable lines in decl signatures

--- a/Stylesheets/_ul.cards.scss
+++ b/Stylesheets/_ul.cards.scss
@@ -89,6 +89,12 @@ ul.cards
         {
             text-indent: 0;
             margin-left: 0;
+
+            a
+            {
+                //  Needed to prevent gaps between lines
+                display: inline-block;
+            }
         }
 
         > code.decl + p
